--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "react-scripts start --port $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-api": "jest --config=./api/jest.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +39,10 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
+    "jest": "24.7.1",
     "now": "^15.8.7"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
