--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "formik": "^1.5.8",
     "micro": "^9.3.4",
     "mysql2": "^1.6.5",
-    "react": "^16.8.6",
+    "react": "^16.9.0-alpha.0",
     "react-app-polyfill": "^1.0.1",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0-alpha.0",
     "react-scripts": "^3.0.1",
     "styled-components": "^4.3.2",
     "yup": "^0.27.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.7",
     "jest": "24.7.1",
     "now": "^15.8.7"
   },
